# Barrett_WAM

./: .gitignore
devel/: .catkin  .rosinstall  setup.sh
devel/include/camera_control_msgs/: GetCamPropertiesRequest.h  GetCamPropertiesResponse.h  GrabAndSaveImageAction.h  GrabAndSaveImageActionFeedback.h  GrabAndSaveImageActionGoal.h  GrabAndSaveImageActionResult.h  GrabAndSaveImageFeedback.h  GrabAndSaveImageGoal.h  GrabAndSaveImageResult.h  GrabHDRImageAction.h  GrabHDRImageActionFeedback.h  GrabHDRImageActionGoal.h  GrabHDRImageActionResult.h  GrabHDRImageFeedback.h  GrabHDRImageGoal.h  GrabHDRImageResult.h  GrabImagesAction.h  GrabImagesActionFeedback.h  GrabImagesActionGoal.h  GrabImagesActionResult.h  GrabImagesFeedback.h  GrabImagesGoal.h  GrabImagesResult.h  SetBinningRequest.h  SetBinningResponse.h  SetBoolRequest.h  SetBoolResponse.h  SetBrightnessRequest.h  SetBrightnessResponse.h  SetExposureRequest.h  SetExposureResponse.h  SetGainRequest.h  SetGainResponse.h  SetGammaRequest.h  SetGammaResponse.h  SetSleepingRequest.h  SetSleepingResponse.h
devel/include/sensor_msgs/: BatteryState.h  CameraInfo.h  ChannelFloat32.h  CompressedImage.h  FluidPressure.h  Illuminance.h  Image.h  Imu.h  JointState.h  Joy.h  JoyFeedback.h  JoyFeedbackArray.h  LaserEcho.h  LaserScan.h  MagneticField.h  MultiDOFJointState.h  MultiEchoLaserScan.h  NavSatFix.h  NavSatStatus.h  PointCloud.h  PointCloud2.h  PointField.h  Range.h  RegionOfInterest.h  RelativeHumidity.h  SetCameraInfoRequest.h  SetCameraInfoResponse.h  Temperature.h  TimeReference.h
devel/include/tf_listen/: tf_listen_mes.h
devel/include/wam_msgs/: BHandFingerPos.h  BHandFingerPosRequest.h  BHandGraspPos.h  BHandGraspPosResponse.h  BHandGraspVel.h  BHandSpreadVelResponse.h  CartPosMove.h  CartPosMoveRequest.h  HoldRequest.h  HoldResponse.h  JointMove.h  JointMoveResponse.h  LASERControl.h  OrtnMove.h  PoseMove.h  PoseMoveRequest.h  PoseMoveResponse.h  RTCartPos.h  RTJointTraj.h  RTJointVel.h  RTOrtnVel.h
devel/lib/moveit_tests/: moveit_tests  plan_test
devel/lib/perception_palm/: perception_palm_node
devel/lib/pkgconfig/: barrett_model.pc  barrett_wam_moveit_config.pc  camera_control_msgs.pc  moveit_tests.pc  perception_palm.pc  pylon_camera.pc  sensor_msgs.pc  tf_listen.pc  vision_mbzirc.pc  wam_description.pc  wam_msgs.pc  wam_node.pc  wam_teleop.pc
devel/lib/pylon_camera/: pylon_camera_node
devel/lib/tf_listen/: tf_listen
devel/lib/vision_mbzirc/: vision_mbzirc
install/include/robotnik_msgs/: AlarmSensor.h  Alarms.h  Axis.h  BatteryStatus.h  Data.h  Interfaces.h  InverterStatus.h  MotorStatus.h  MotorsStatus.h  MotorsStatusDifferential.h  State.h  axis_recordRequest.h  axis_recordResponse.h  enable_disableRequest.h  enable_disableResponse.h  encoders.h  get_digital_inputRequest.h  get_digital_inputResponse.h  get_modeRequest.h  get_modeResponse.h  homeRequest.h  homeResponse.h  inputs_outputs.h  ptz.h  set_analog_outputRequest.h  set_analog_outputResponse.h  set_digital_outputRequest.h  set_digital_outputResponse.h  set_float_valueRequest.h  set_float_valueResponse.h  set_heightRequest.h  set_heightResponse.h  set_modeRequest.h  set_modeResponse.h  set_odometryRequest.h  set_odometryResponse.h  set_ptzRequest.h  set_ptzResponse.h
install/include/summit_xl_pad/: enable_disable_padRequest.h  enable_disable_padResponse.h
install/include/wam_msgs/: BHandFingerPosResponse.h  BHandFingerVel.h  BHandFingerVelRequest.h  BHandFingerVelResponse.h  BHandGraspPosRequest.h  BHandGraspVelRequest.h  BHandGraspVelResponse.h  BHandSpreadPos.h  BHandSpreadPosRequest.h  BHandSpreadPosResponse.h  BHandSpreadVel.h  BHandSpreadVelRequest.h  CartPosMoveResponse.h  EndpointState.h  GravityComp.h  GravityCompRequest.h  GravityCompResponse.h  Hold.h  JointMoveRequest.h  LASERControlRequest.h  LASERControlResponse.h  LEDControl.h  LEDControlRequest.h  LEDControlResponse.h  OrtnMoveRequest.h  OrtnMoveResponse.h  RTCartVel.h  RTJointPos.h  RTJointTq.h  RTOrtnPos.h  RTPosMode.h  RTPose.h
install/lib/pkgconfig/: barrett_hand_control.pc  barrett_hand_description.pc  barrett_hand_gazebo.pc  cv_bridge.pc  image_geometry.pc  moveit_tests.pc  opencv_tests.pc  robot_localization.pc  robotnik_msgs.pc  robotnik_sensors.pc  summit_xl_control.pc  summit_xl_description.pc  summit_xl_gazebo.pc  summit_xl_localization.pc  summit_xl_navigation.pc  summit_xl_pad.pc  summit_xl_robot_control.pc  summit_xl_sim_bringup.pc  wam_node.pc  wam_teleop.pc
install/lib/robot_localization/: ekf_localization_node  navsat_transform_node  ukf_localization_node
install/lib/summit_xl_localization/: navsat_transform_new_node  rl_utils
install/lib/summit_xl_pad/: summit_xl_pad
install/lib/summit_xl_robot_control/: summit_xl_robot_control
install/share/barrett_wam_moveit_config/: package.xml
install/share/moveit_tests/: package.xml
install/share/moveit_tests/cmake/: moveit_testsConfig.cmake
install/share/vision_mbzirc/: package.xml
install/share/wam_msgs/: package.xml
install/share/wam_msgs/cmake/: wam_msgs-msg-extras.cmake  wam_msgs-msg-paths.cmake  wam_msgsConfig.cmake
src/: .rosinstall  .rosinstall.bak  collisionboxes.txt  spline_traj.py
src/barrett_model/robots/: wam_7dof_wam_bhand.urdf.xacro
src/barrett_moveit/: README.md
src/moveit_tests/: CMakeLists.txt  package.xml
src/moveit_tests/launch/: moveit_tests.launch
src/moveit_tests/src/: moveit_tests.cpp  moveit_tests_ORIGINAL.cpp  plan_test.cpp
src/perception_palm/: README.md  perception_palm.rosinstall
src/perception_palm/include/: palm_mcp.h
src/tf_listen/: CMakeLists.txt
src/tf_listen/launch/: tf_listen.launch
src/tf_listen/msg/: tf_listen_mes.msg
src/tf_listen/src/: tf_listen.cpp
src/vision_mbzirc/: CMakeLists.txt
src/vision_mbzirc/launch/: vision_mbzirc.launch
src/vision_mbzirc/src/: Mywidget.cpp  Mywidget.h
src/wam_common/wam_msgs/: CMakeLists.txt
src/wam_common/wam_msgs/msg/: RTJointTraj.msg
src/wam_description/: CMakeCache.txt
src/wam_robot/: README.md
src/wam_robot/wam_node/: CMakeLists.txt
src/wam_robot/wam_node/src/: JpTraj.h  wam_node.cpp
(+180 files in other folders)
