<?xml version="1.0"?>
<package>
  <name>wam_msgs</name>
  <version>0.0.0</version>
  <description>

       Wam messages
  </description>

  <maintainer email="hm@barrett.com">robot</maintainer>

  <license>BSD</license>

  <author>Maintained by Barrett Techonlogy Inc., Kyle Maroney</author>
  <author>Hariharasudan Malaichamee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
